--- a/scripts/preprocessing.ipynb
+++ b/scripts/preprocessing.ipynb
@@ -15,34 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from proj1_helpers import *\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "isFile = os.path.isfile(\"../data/train.csv.zip\")\n",
-    "isFile"
+    "from proj1_helpers import *"
    ]
   },
   {
@@ -66,7 +43,7 @@
     }
    ],
    "source": [
-    "y, tX, idx = load_csv_data(\"../data/train.csv.zip\")\n",
+    "y, tX, idx = load_csv_data(\"../data/train.csv\")\n",
     "#data_train = pd.read_csv(\"../data/train.csv.zip\")"
    ]
   },
