--- a/latex-example-paper/latex-template.tex
+++ b/latex-example-paper/latex-template.tex
@@ -26,18 +26,32 @@ Then we implement the six different methods: Least Squares, Least Squares GD, Le
 
 \section{Data Preprocessing}
 \label{sec:prepro}
-In order to deal with the data, we need to standardize it. The standardization helps us to scale the data in a bounded interval and detects that every data has to be known. We standardize both, the test and the train data set. \\
-We afterwards delete outliers, that means we delete values, which are further away from the mean than a certain threshold. 
+In order to deal with the data, we need to standardize it. The standardization helps us to scale the data in a bounded interval. We standardize both, the test and the train data set. \\
+We afterwards delete outliers: values, which are further away from the mean than a certain threshold. 
 \\
 The preprocessing deals with:
 \begin{itemize}
 	\item Deletion of outliers in the train data
-	\item Deletion of the entries in the the sample that contains the -999 value
+	\item Deletion of the entries in the sample that contains the -999 value
 	\item Deletion of the feature in the sample that contains the -999 value
-	\item Substitution of the values -999 by the mean of the corresponding values
+	\item Substitution of the values -999 by the mean of the corresponding values (mean = 0 after standardizing)
 \end{itemize}
 
 
+
+
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\columnwidth]{preprocessing.png}
+	\caption{MSE for different approaches of preprocessing using least squares to evulate their effect.}
+	\vspace{-3mm}
+	\label{fig:prepro}
+\end{figure}
+
+
+In order to find out, which approaches of preprocessing yield good results, we evaluate their effect on the MSE. In figure 1 we used Least Squares to demonstrate this. In can be observed, that just standardizing does not help us to preprocess the data in a good way because the MSE is still quiet high. 
+By substituting the -999 values by the mean of the data, a big reduction in the loss can be achieved. Furthermore the loss can be reduced by standardizing the data and removing outliers. \\
 
 
 
@@ -47,9 +61,7 @@ The preprocessing deals with:
 
 For each model we run 4-fold cross validation on our training data to tune our hyperparameters in order to optimize our model. The hyperparameters in this case are the \textit{degree} for all the models and the constant \textit{lambda} for the Ridge Regression and the Regularized Logistic Regression.
 \\
-Figure 1 shows how the choice of the \textit{degree} affects the \textit{RMSE} in the case of Least Squares. We see that for degree = 11 we get our best result, whereas for higher degrees the model will overfit. Lower degrees instead give a bigger \textit{RMSE}, hence the model underfits.
-
-
+Figure 2 shows how the choice of the \textit{degree} affects the \textit{RMSE} in the case of Least Squares. We run the cross validation for degrees between 1 and 13 and find out, that for degree = 11 we get our best result. For higher degrees the model will overfit and lower degrees instead give a bigger \textit{RMSE}, hence the model underfits.
 
 \begin{figure}[htbp]
   \centering
@@ -58,6 +70,8 @@ Figure 1 shows how the choice of the \textit{degree} affects the \textit{RMSE} i
   \vspace{-3mm}
   \label{fig:crossvalidationleastsquares}
 \end{figure}
+
+
 
 
 
@@ -71,7 +85,7 @@ Figure 1 shows how the choice of the \textit{degree} affects the \textit{RMSE} i
 \end{figure}
  %%%%pic to be added
  %%% find optimal lambda
- For the Ridge Regression a degree of 12 gave us the best result. Using cross validation we computed the \textit{RMSE} for different values of \textit{lambda} in order to optimize this hyperparameter. We find out, that a value of approximately 0.0059 gave the best result, which can be checked in Figure 2. When we choose this value too small, the test error gets much bigger, whereas the training error reduces. If \textit{lambda} is too big, both, the test and training error augment.
+ For the Ridge Regression a degree of 12 gives the best result. Using cross validation we computed the \textit{RMSE} for different values of \textit{lambda} in order to optimize this second hyperparameter. We find out, that a value of approximately 0.0059 gives the best result, which can be checked in Figure 3. When we choose this value too small, the test error gets much bigger, whereas the training error reduces. If \textit{lambda} is too big, both, the test and training error augment.\\
  The final used hyperparameter for each method can be found in table 1.\\
 
 
@@ -105,10 +119,10 @@ After having optimized the hyperparameters for each model we want to see how the
 		Methods&Accuracy&F1-Score\\
 		\hline
 		Least Squares&0.821&0.723\\
-		Least Squares GD&0.566&0.012\\
+		Least Squares GD&0.682&0.511\\
 		Least Squares SGD&0.391&0.394\\		
 		Ridge Regression&0.815&0.713\\
-		Logistic Regression&0.673&0.12\\
+		Logistic Regression&0.674&0.141\\
 		Reg. Logistic Regression&0.673&0.12\\
 		\hline
 	\end{tabular}
@@ -116,22 +130,26 @@ After having optimized the hyperparameters for each model we want to see how the
 	\label{tab:perform}
 \end{table}
 
-Ending up with an accuracy of 0.821 and F1-Score of 0.723, Least Squares performs best amongst all methods. Ridgre regression performs quite good as well, it gives an accuracy of 0.815 and F1-Score of 0.713.
-Logistic and Regularized Logistic Regression give both an accuracy of 0.673 but perform quite bad when taking the F1-Score as accuracy measure. 
+Ending up with an accuracy of 0.821 and F1-Score of 0.723, Least Squares performs best amongst all methods. Least Squares Gradient and Stochastic Gradient methods in contrast perform not very well. 
+Ridgre regression performs quite good as well, it gives an accuracy of 0.815 and F1-Score of 0.713.
+Logistic and Regularized Logistic Regression give both an accuracy of approx. 0.67 but perform quite bad when taking the F1-Score as accuracy measure. 
+
 
 \section{Discussion}
 
-Is it actually surprising, that Least Squares Gradient performs that poor compared to the Least Squares method. In theory the SGD method would converge to the same optimum as Least Squares. Possible causes for this may be that we did not choose a good \textit{gamma} for the stepsize or we did not do enough iterations. The Least Squares Stochastic Gradient Descent performs even worse. Reasons for that might be badly chosen stepsize \textit{gamma} and batchsize. We did not take computational cost in account in order to compare the methods. 
-
-
+ 
+Least Squares Gradient performs not as good as the Least Squares method, even though in theory it would converge to the same optimum. We had to choose a quite small \textit{gamma} (approx $10^{-19}$) for not making explode the loss. The stepsize can be concerned as an additional hyperparameter which to choose correctly. The Least Squares Stochastic Gradient Descent performs even worse. Reasons for that might be also badly chosen stepsize \textit{gamma} and batchsize.\\
+We did not take computational cost into account and Least Squares gave us a good result. That's why we did not focus that much on optimizing the stepsize in order to make the both Gradient methods perform better. \\
+Logistic Regressions and Regularized Logistic Regression perform quite similar which is actually surprising, given the fact that the additional penalty term is supposed to avoid overfitting, hence to support simpler models. But since we ended up with an optimal degree of 10 for both methods, we might have chosen \textit{lambda} to small to have a real impact.
 
 
 \section{Summary}
 
-In this project we used different regression methods to predict the Higgs Boson. After preprocessing the data and optimizing the hyperparameters for each method using 4-fold cross validation, we have chosen the Least Squares Method to tackle this task. This method performed best concerning Accuracy and F1-Score.  
+In this project we used different regression methods to predict the Higgs Boson. After preprocessing the data and optimizing the hyperparameters for each method using 4-fold cross validation, we have chosen the Least Squares Method to tackle this task. This method performed best concerning Accuracy and F1-Score.
 
 
-\bibliographystyle{IEEEtran}
-\bibliography{literature}
+
+%\bibliographystyle{IEEEtran}
+%\bibliography{literature}
 
 \end{document}
