--- a/latexreport/latex-template.tex
+++ b/latexreport/latex-template.tex
@@ -32,17 +32,10 @@ We afterwards delete outliers: values, which are further away from the mean than
 The preprocessing deals with:
 \begin{itemize}
 	\item Substitution of the -999 values for each entries using the mean of \textit{clean} data in train and test dataset
-	\item Normalizing/standardizing the value for all entries with standar deviation and mean
-	\item Deletion of outliers in the train data (set the treshold to cut off the entries)
+	\item Standardization of the value for all entries with standar deviation and mean
+	\item Deletion of outliers in the train data (set the treshold to cut off the entries).
 \end{itemize}
 
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[width=\columnwidth]{trainBoxPlot.png}
-	\caption{Boxplot for train dataset. )
-	\vspace{-3mm}
-	\label{fig:prepro}
-\end{figure}
 
 
 
@@ -54,9 +47,17 @@ The preprocessing deals with:
 	\label{fig:prepro}
 \end{figure}
 
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\columnwidth]{trainBoxPlot.png}
+	\caption{Boxplot for train dataset. )
+	\vspace{-3mm}
+	\label{fig:boxplottrainset}
+\end{figure}
+
 
 In order to find out, which approaches of preprocessing yield good results, we evaluate their effect on the MSE. In figure 1 we used Least Squares to demonstrate this. In can be observed, that just standardizing does not help us to preprocess the data in a good way because the MSE is still quiet high. 
-By substituting the -999 values by the mean of the data, a big reduction in the loss can be achieved. Furthermore the loss can be reduced by standardizing the data and removing outliers. For removing outlier, we plotted the boxplot to observe the quantiles of each features. and we use this value as threshold to filter out the outlier of each data point.\\
+By substituting the -999 values by the mean of the data, a big reduction in the loss can be achieved. Furthermore the loss can be reduced by standardizing the data and removing outliers. For removing outlier, we plotted the boxplot to observe the quantiles of each features. and we use this value as refereced threshold by adding bias (some small integer) to filter out the data points in which the values overly exceeding the quantiles. In this particular experiment, we set the treshold to 8.5 since the maximum quantile value for all 30 features is around 6-7 as shown in figure 2.\\
 
 
 
@@ -66,7 +67,7 @@ By substituting the -999 values by the mean of the data, a big reduction in the 
 
 For each model we run 4-fold cross validation on our training data to tune our hyperparameters in order to optimize our model. The hyperparameters in this case are the \textit{degree} for all the models and the constant \textit{lambda} for the Ridge Regression and the Regularized Logistic Regression.
 \\
-Figure 2 shows how the choice of the \textit{degree} affects the \textit{RMSE} in the case of Least Squares. We run the cross validation for degrees between 1 and 13 and find out, that for degree = 11 we get our best result. For higher degrees the model will overfit and lower degrees instead give a bigger \textit{RMSE}, hence the model underfits.
+Figure 3 shows how the choice of the \textit{degree} affects the \textit{RMSE} in the case of Least Squares. We run the cross validation for degrees between 1 and 13 and find out, that for degree = 11 we get our best result. For higher degrees the model will overfit and lower degrees instead give a bigger \textit{RMSE}, hence the model underfits.
 
 \begin{figure}[htbp]
   \centering
@@ -86,7 +87,7 @@ Figure 2 shows how the choice of the \textit{degree} affects the \textit{RMSE} i
 \end{figure}
  %%%%pic to be added
  %%% find optimal lambda
- For the Ridge Regression a degree of 12 gives the best result. Using cross validation we computed the \textit{RMSE} for different values of \textit{lambda} in order to optimize this second hyperparameter. We find out, that a value of approximately 0.0059 gives the best result, which can be checked in Figure 3. When we choose this value too small, the test error gets much bigger, whereas the training error reduces. If \textit{lambda} is too big, both, the test and training error augment.\\
+ For the Ridge Regression a degree of 12 gives the best result. Using cross validation we computed the \textit{RMSE} for different values of \textit{lambda} in order to optimize this second hyperparameter. We find out, that a value of approximately 0.0059 gives the best result, which can be checked in Figure 4. When we choose this value too small, the test error gets much bigger, whereas the training error reduces. If \textit{lambda} is too big, both, the test and training error augment.\\
  The final used hyperparameter for each method can be found in table 1.\\
 
 
@@ -143,12 +144,12 @@ Logistic and Regularized Logistic Regression give both an accuracy of approx. 0.
  
 Least Squares Gradient performs not as good as the Least Squares method, even though in theory it would converge to the same optimum. We had to choose a quite small \textit{gamma} (approx $10^{-19}$) for not making explode the loss. The stepsize can be concerned as an additional hyperparameter which to choose correctly. The Least Squares Stochastic Gradient Descent performs even worse. Reasons for that might be also badly chosen stepsize \textit{gamma} and batchsize.\\
 We did not take computational cost into account and Least Squares gave us a good result. That's why we did not focus that much on optimizing the stepsize in order to make the both Gradient methods perform better. \\
-Logistic Regressions and Regularized Logistic Regression perform quite similar which is actually surprising, given the fact that the additional penalty term is supposed to avoid overfitting, hence to support simpler models. But since we ended up with an optimal degree of 10 for both methods, we might have chosen \textit{lambda} to small to have a real impact.
+Logistic Regressions and Regularized Logistic Regression perform quite similar which is actually surprising, given the fact that the additional penalty term is supposed to avoid overfitting, hence to support simpler models. But since we ended up with an optimal degree of 10 for both methods, we might have chosen \textit{lambda} to small to have a real impact. For Logistic Regression and Regularized Logistic Regression we set the initial weight as the weight we got from Least Square and by doing this we got better result compared to initiate the weight with zero or random values. 
 
 
 \section{Summary}
 
-In this project we used different regression methods to predict the Higgs Boson. After preprocessing the data and optimizing the hyperparameters for each method using 4-fold cross validation, we have chosen the Least Squares Method to tackle this task. This method performed best concerning Accuracy and F1-Score.
+In this project we used different regression methods to predict the Higgs Boson. After preprocessing the data and optimizing the hyperparameters for each method using 4-fold cross validation, we have chosen the Least Squares Method to tackle this task. This method performed best concerning Accuracy = 0.822 and F1-Score = 0.728.
 
 
 
