--- a/latexreport/latex-template.tex
+++ b/latexreport/latex-template.tex
@@ -135,7 +135,7 @@ After having optimized the hyperparameters for each model we want to see how the
 
 Ending up with an accuracy of 0.822 and F1-Score of 0.728, Least Squares performs best amongst all methods. Both Least Squares Descent methods in contrast perform not very well. 
 Ridgre regression performs quite good as well, it gives an accuracy of 0.815 and F1-Score of 0.713.
-Logistic and Regularized Logistic Regression give both an accuracy of approx. 0.67 but perform quite bad when taking the F1-Score as accuracy measure. 
+Logistic and Regularized Logistic Regression give both an accuracy of approx. 0.819 and also perform quite good when taking the F1-Score as accuracy measure. 
 
 
 \section{Discussion}
